--- a/index.html
+++ b/index.html
@@ -207,12 +207,12 @@
     var geojsonData = {};
 
     // Carga de archivos externos
-    cargarGeoJSON('protegidas', 'datos_geojson/ciudades.geojson');
-    cargarGeoJSON('municipios', 'datos_geojson/JaguarBasin.geojson');
-    cargarGeoJSON('corredor',   'datos_geojson/corredor_jri.geojson');
-    cargarGeoJSON('stepping',   'datos_geojson/STEPPING_STONE.geojson');
-    cargarGeoJSON('arcas',   'datos_geojson/AREA.geojson');
-    cargarGeoJSON('Buffer',   'datos_geojson/BUFFER_AREA.geojson');
+    cargarGeoJSON('protegidas', 'ciudades.geojson');
+    cargarGeoJSON('municipios', 'JaguarBasin.geojson');
+    cargarGeoJSON('corredor',   'corredor_jri.geojson');
+    cargarGeoJSON('stepping',   'STEPPING_STONE.geojson');
+    cargarGeoJSON('arcas',   'AREA.geojson');
+    cargarGeoJSON('Buffer',   'BUFFER_AREA.geojson');
 
     // Mostrar/Ocultar capas
     function mostrarCapa(nombre) {
@@ -318,3 +318,4 @@
 
 </body>
 </html>
+
